--- a/style.css
+++ b/style.css
@@ -47,6 +47,8 @@ body {
 }
 .radio-checkbox--hidden {
     position: absolute;
+    width: 0;
+    height: 0;
     z-index: -1;
     opacity: 0;
 }
@@ -118,8 +120,6 @@ body {
 .filter-item:hover .label-title {
     color: #020304;
     transition: .3s;
-}
-.filter-item-dimentions {
 }
 .label-title-dimentions {
     color: #020304;
